# jniapp_with_ffmpeg_so

./: .gitignore  settings.gradle
app/: .gitignore  build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/jniapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/prebuilt/arm64-v8a/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswscale.pc
app/src/main/cpp/prebuilt/armeabi-v7a/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswscale.pc
app/src/main/cpp/prebuilt/x86/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswscale.pc
app/src/main/cpp/prebuilt/x86_64/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswscale.pc
app/src/main/java/com/example/jniapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jniapp/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
